# ember-lang

./: .gitignore  .gitmodules  CMakeLists.txt  COMMERCIAL_LICENSE.md  LICENSE  README.md  RED_PHASE_gc_full_new_delete.txt  RED_PHASE_lang_new_delete.txt  apply_red6_fixes.py  getexit.bat  hello.ember  results_codegen_paths.csv  results_codegen_paths.md  tmp_b1_recurse.cpp  tmp_check_ud2.cpp  tmp_keyed_addrec.cpp  tmp_keyed_recurse.cpp  tmp_recurse_thin.cpp  tmp_wrap.cpp  tmp_wrongkey_debug.cpp  v0.6_BENCHMARK_RESULTS.md  verify_g7.sh
.github/workflows/: ci.yml
ai-skills/: README.md
ai-skills/ember-language/: SKILL.md
bench/: baseline_paths.cpp  bench_codegen_paths.cpp  bench_output_names.hpp  run_bench.sh
demo/: NOTES.md  README.md  SLICE_ESCAPE_SAFETY_INVESTIGATION.md  STRING_CONST_MODE_INVESTIGATION.md  STRING_ENCRYPTION_ANALYSIS.md  main.ember  main_em.em  main_em.ember
demo/compiler/: NOTES.md  README.md  eval.ember  lex.ember  main.ember  parse.ember
demo/concurrency/: NOTES.md  README.md  concurrency_demo.cpp  race.ember  tick_demo.cpp  tick_sim.ember
demo/data/: buffer.ember  buffer_em.ember  config.ember
demo/game/: NOTES.md  README.md  entity.ember  main.ember  physics.ember  spawn.ember
demo/hotreload/: .gitignore  NOTES.md  README.md  hotreload_demo.cpp  render_v1.ember  render_v2.ember  render_v3.ember
demo/math/: stats.ember  vec.ember
demo/pipeline/: process.ember  process_em.ember
docs/: AUDIT_2026-07-09.md  AUDIT_2026-07-10.md  AUDIT_2026-07-10_SCRUTINY.md  BINDING_API.md  BUNDLING_AND_EM_MODULES.md  CODEGEN_SPEC.md  COMPILER_PIPELINE.md  DESIGN.md  GAP_ANALYSIS.md  HOST_STRUCT_ABI_RESEARCH.md  HOT_RELOAD.md  LIFECYCLE.md  LLVM_ADDITIONAL_PASSES_RESEARCH.md  LLVM_PASS_SYSTEM_RESEARCH.md  MAINTENANCE_CONSTRAINTS.md  MAINTENANCE_LOG.md  MEMORY_AND_GC.md  MODULES.md  PASS_AUTHORING.md  RESEARCH_NOTES.md  RESTRUCTURE_PLAN.md  ROADMAP.md  SAFETY_AND_SANDBOX.md  TYPE_SYSTEM.md  VST3_PLUGIN_GUIDE.md  plan_CONTEXT_THREADSAFETY.md  plan_ENUMS.md  plan_FUNCTION_REFS.md  plan_SYNC_QUEUES.md  v0.3_DEFERRED_BINDING_ANALYSIS.md  v0.6_INTEGRATION_NOTES.md  v1.0_INTEGRATION_NOTES.md
docs/abi_evidence/: probe_abi_attr.asm  probe_c.asm  probe_caller.asm  probe_cpp.cpp  probe_pod16.asm  probe_ret16.asm  probe_slots.asm  rustabi.asm  rustabi2.asm
docs/audit/: ATTACK_SURFACE_SWEEP_2026-07-12.md  AUDIT_2026-07-09.md  AUDIT_2026-07-09_REVALIDATION.md  AUDIT_2026-07-10.md  AUDIT_2026-07-10_REVALIDATION.md  AUDIT_2026-07-10_SCRUTINY.md  AUDIT_2026-07-10_STAGE_A.md  AUDIT_2026-07-10_STAGE_B.md  AUDIT_2026-07-11_ARCH_DESIGN.md  AUDIT_2026-07-11_DOCS_TESTS.md  AUDIT_2026-07-11_SYNTHESIS.md  AUDIT_CODE_CORRECTNESS_2026-07-11.md  BASELINE_DIRTY_READONLY_2026-07-15.md  CODE_REVIEW_2026-07-11.md  DISPOSITION_C8_DIRTY_READONLY_2026-07-13.md  DOCS_AUDIT_REVALIDATION_2026-07-13.md  DOCS_REVIEW_2026-07-11.md  EM_FORMAT_RED_TEAM_2026-07-11.md  FINAL_AUDIT_SYNTHESIS_2026-07-11.md  FINAL_COMPLETENESS_AUDIT_2026-07-11.md  (+19 more)
examples/: aggregate_global_test.cpp  array_lit_test.cpp  audio_coverage_test.cpp  bench_ember_vs_as.cpp  bench_output_names_test.cpp  binding_abi_test.cpp  bundler_test.cpp  call_raw_test.cpp  codegen_coverage_test.cpp  codegen_opt_test.cpp  constexpr_test.cpp  coroutine_coverage_test.cpp  cross_module_handles_test.cpp  em_bytes_test.cpp  em_cli_emit_test.cpp  em_loader_hardening_test.cpp  em_redteam_audit_test.cpp  em_roundtrip_test.cpp  em_signed_test.cpp  em_v5_ir_test.cpp  em_v5_mixed_test.cpp  em_v6_keyed_test.cpp  ember_bundle.cpp  ember_check.cpp  ember_cli.cpp  ember_cli_pipe_live_test.cpp  ember_pass_test.cpp  ember_passes_exec_test.cpp  ember_stub_main.cpp  engine_edge_test.cpp  ext_bounds_test.cpp  ext_lifecycle_test.cpp  ext_map_test.cpp  ext_random.cpp  ext_random.hpp  ext_random_test.cpp  ext_registration_test.cpp  ext_runtime_test.cpp  ext_sync_test.cpp  ext_ui_render_test.cpp  (+58 more)
examples/custom_pass/: CMakeLists.txt  README.md  block_merge_pass.cpp  custom_pass_example.ember  custom_passes.hpp  minimal_pass.cpp  mov_substitute_pass.cpp  mov_substitute_test.cpp  nop_injection_pass.cpp
examples/vst3_wrapper/: CMakeLists.txt  bitcrusher_vst.ember  chorus_vst.ember  compressor_vst.ember  delay_vst.ember  demo_ui_vst.ember  distortion_vst.ember  filter_vst.ember  gain_vst.ember  limiter_vst.ember  oscillator_vst.ember  panner_vst.ember  reverb_vst.ember  synth_vst.ember  tremolo_vst.ember  vst3_ember_editor.cpp  vst3_ember_editor.h  vst3_ember_entry.cpp  vst3_ember_factory.cpp  vst3_ember_processor.cpp  vst3_ember_processor.h
examples/vst3_wrapper/stress_tests/: CMakeLists.txt  README.md  vst3_stress_tests.cpp
extensions/: AUDIT.md  README.md
scripts/: package_release.sh  prepare_release.sh  run_coverage.sh  run_drmemory.sh  run_static_analysis.sh
self_hosted/: FULL_PARITY_MATRIX.md  MODULE_IMAGE_FORMAT.md  README.md  _mini.ember  _probe.ember  bootstrap.ember  bootstrap_compiler_source.ember  codegen.ember  codegen_test.ember  dummytest_0.ember  dummytest_100.ember  dummytest_125.ember  dummytest_127.ember  dummytest_128.ember  dummytest_129.ember  dummytest_130.ember  dummytest_140.ember  dummytest_50.ember  emberc.ember  full_pipeline.ember  full_pipeline_test.ember  lex.ember  lex_test.ember  parse.ember  parse_test.ember  preview_smoke_input.ember  probe.ember  probe_bisect.ember  sema.ember  sema_test.ember  str_test.ember
src/: ast.hpp  binding_builder.hpp  codegen.cpp  codegen.hpp  context.hpp  dispatch_abi.cpp  dispatch_abi.hpp  dispatch_table.hpp  em_file.hpp  em_loader.cpp  em_loader.hpp  em_type_codec.cpp  em_type_codec.hpp  em_writer.cpp  em_writer.hpp  ember_pass.cpp  ember_pass.hpp  ember_pass_pipeline.hpp  ember_pass_registry.hpp  engine.cpp  engine.hpp  extension_registry.hpp  gc.cpp  gc.hpp  gc_roots.hpp  globals.hpp  hot_reload.hpp  hot_reload_domain.hpp  import.cpp  import.hpp  jit_memory.cpp  jit_memory.hpp  key_provider.cpp  key_provider.hpp  keyed_dispatch.cpp  keyed_dispatch.hpp  keyed_hot_reload.cpp  keyed_hot_reload.hpp  lexer.cpp  lexer.hpp  (+47 more)
tests/: run_lang_tests.sh  selfhost_preview_smoke.cmake
(+568 files in other folders)
